Backgrounds remove themselves when out of screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <canvas id="myCanvas"></canvas>
+  <script type="application/javascript" src="vendor/keymaster.js"></script>
+  
   <script type="application/javascript" src="lib/bundle.js"></script>
   
 </body>
