--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Need the jquery UI for the timeline slider -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> 
-  <link rel="stylesheet" href="reset.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  
+  <script type="application/javascript" src="controls.js"></script>
+  <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="style.css">
 
   <title>SpaceX Flights</title>
@@ -18,16 +23,11 @@
     <canvas id="myCanvas"></canvas>
     <div class="rightside"></div>
   </div>
-  <div id="body">
-    <div class="controls">
-        <p>
-        <label for="amount">Donation amount ($50 increments):</label>
-        <input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold;">
-        </p>
-      <div id="slider"> </div>
+    <div id="main">
     </div>
   </div>
-  <script type="application/javascript" src="controls.js"></script>
+  <input type="text" id="amount" value="40" />      
+  <div id="slider-range"> </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
   <script type="application/javascript" src="lib/bundle.js"></script>
   
