Refactor context api so that dom can control it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  
-  <script type="application/javascript" src="controls.js"></script>
+  <script type="application/javascript" src="lib/controls.js"></script>
   <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="style.css">
 
@@ -24,10 +24,11 @@
     <div class="rightside"></div>
   </div>
     <div id="main">
+      <p id="launch">Launch Falcon 9</p>
+      <input type="text" id="amount" value="Select a date" />      
+      <div id="slider-range"></div>
     </div>
   </div>
-  <input type="text" id="amount" value="40" />      
-  <div id="slider-range"> </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
   <script type="application/javascript" src="lib/bundle.js"></script>
   
