--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <div class="rightside"></div>
   </div>
     <div id="main">
-      <p id="launch">Launch Falcon 9</p>
+      <button id="launch">Launch Falcon 9</button>
       <input type="text" id="amount" value="Select a date" />      
       <div id="slider-range"></div>
+      
     </div>
   </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
