--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     <div class="rightside"></div>
   </div>
     <div id="main">
-      <button id="launch">Launch Falcon 9</button>
+      <button id="launch">Launch</button>
+      <button id="stop-flight">Stop</button>
       <input type="text" id="amount" value="Select a date" />      
       <div id="slider-range"></div>
-      
+      <button id="button2">Message the flight</button>
     </div>
   </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
