--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
+  <script src="https://use.fontawesome.com/a1b314728e.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  
   <script type="application/javascript" src="lib/controls.js"></script>
   <!-- <link rel="stylesheet" href="reset.css"> -->
@@ -26,9 +27,25 @@
     <div id="main">
       <button id="launch">Launch</button>
       <button id="stop-flight">Stop</button>
-      <input type="text" id="amount" value="Select a date" />      
+      <input type="text" id="date" value="Select a date" />      
       <div id="slider-range"></div>
       <button id="button2">Message the flight</button>
+    </div>
+    <div id="details">
+      <div class="left">
+        <!-- show mission patch -->
+        <img id="patch" />
+      </div>
+      <div class="center">
+        <h2>Information for flight <span class="flight_number"></span></h2>
+        <i class="fa fa-rocket" aria-hidden="true"><span class="rocket_name"></span></i>
+      </div>
+      <div class="right">
+        <!-- embed youtube video -->
+        <iframe width="420" height="315"
+        id="youtube">
+        </iframe>
+      </div>
     </div>
   </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
