Add google maps to show launch site

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <script src="https://use.fontawesome.com/a1b314728e.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  
   <script type="application/javascript" src="lib/controls.js"></script>
+  <script 
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs29luKQEI61ckdbC5iSkw6jRmh4hqWPY">
+  </script>
   <!-- <link rel="stylesheet" href="reset.css"> -->
   <link rel="stylesheet" href="style.css">
 
@@ -52,6 +55,14 @@
       </div>
     </div>
     <div id="map"></div>
+    <div id="footer">
+      <a href="https://github.com/reidjs"><i class="fa fa-github-alt" aria-hidden="true"></i>
+        GitHub</a>
+      <a href="https://www.linkedin.com/in/reidsherman/"><i class="fa fa-linkedin" aria-hidden="true"></i>
+        LinkedIn</a>
+      <a href="https://www.reidsherman.com/"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
+        Website</a>
+    </div>
   </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
   <script type="application/javascript" src="lib/bundle.js"></script>
