Add google maps pano

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         </iframe>
       </div>
     </div>
-    <div id="map"></div>
+    <div id="map-container">
+      <div id="map"></div><div id="pano"></div>
+    </div>
     <div id="footer">
       <a href="https://github.com/reidjs"><i class="fa fa-github-alt" aria-hidden="true"></i>
         GitHub</a>
