--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 </head>
 <body>
   <div id="header">
-    <div class="leftside"></div>
-    <canvas id="myCanvas"></canvas>
-    <div class="rightside"></div>
+    <div class="leftside"><canvas id="myCanvas"></canvas></div>
+    <div class="rightside"><canvas id="matterCanvas"></canvas></div>
   </div>
     <div id="main">
       <button id="launch">Launch</button>
