Show plot and globe

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 </head>
 <body>
   <div id="header">
-    <div class="leftside"></div>
+    <div class="leftside">
+        <canvas id="myChart" width="600" height="400"></canvas>    
+    </div>
     <div class="rightside">
-      <!-- <canvas id="matterCanvas"></canvas> -->
-      <!-- https://bl.ocks.org/mbostock/ba63c55dd2dbc3ab0127 -->
+      <!-- The globe will show up here -->
       
           
     </div>
