--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   crossorigin="anonymous"></script>
   <script src="https://use.fontawesome.com/a1b314728e.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  
-  <script type="application/javascript" src="lib/controls.js"></script>
+  <!-- <script type="application/javascript" src="lib/controls.js"></script> -->
   <script 
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs29luKQEI61ckdbC5iSkw6jRmh4hqWPY">
   </script>
