--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
       </div>
     </div>
     <div id="map-container">
-      <div id="map"></div><div id="pano"></div>
+      <div id="map-inner">
+        <div id="map"></div>
+        <div id="pano"></div>
+      </div>
     </div>
     <canvas id="myCanvas"></canvas>
     <div id="footer">
