About to refactor plot

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="rightside">
       <!-- The globe will show up here -->
-      
+      <canvas id="myGlobe"></canvas>
           
     </div>
   </div>
