--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <input type="text" id="date" value="Select a date" />      
     <div id="slider-range"></div>
     <div id="visuals">
-    <canvas id="myGlobe"></canvas>
+      <canvas id="myGlobe"></canvas>
+    </div>
     <div id="map-container">
       <div id="map"></div>
       <div id="pano"></div>
