--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <i class="fa fa-envelope-o" aria-hidden="true"><span class="payload"></span></i>
     <i class="fa fa-map-marker" aria-hidden="true"><span class="location"></span></i>
     <p class="information"></p>
-    <iframe width="420" height="315" id="youtube"></iframe>
+    <iframe width="300" height="315" id="youtube"></iframe>
     
   </div>
   <div id="main">
     <h1>SpaceX Flight Visualizer</h1>
-    <canvas id="myChart" width="600" height="200"></canvas> 
+    <canvas id="myChart"></canvas> 
     <input type="text" id="date" value="Select a date" />      
     <div id="slider-range"></div>
     <div id="visuals">
