--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script type='text/javascript' src='http://d3js.org/topojson.v1.min.js'></script>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Play:700" rel="stylesheet">
 
   <title>SpaceX Flights</title>
 </head>
@@ -39,9 +40,7 @@
     <canvas id="myChart"></canvas> 
     <input type="text" id="date" value="Select a date" />      
     <div id="slider-range"></div>
-    <div id="visuals">
-      <canvas id="myGlobe"></canvas>
-    </div>
+    <canvas id="myGlobe"></canvas>
     <div id="map-container">
       <div id="map"></div>
       <div id="pano"></div>
