--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <canvas id="myChart"></canvas> 
     <input type="text" id="date" value="Select a date" />      
     <div id="slider-range"></div>
+    <h2>Orbit: <span class="orbit"></span></h2>
     <canvas id="myGlobe"></canvas>
+    <h2>Launch site</h2>
     <div id="map-container">
       <div id="map"></div>
       <div id="pano"></div>
