--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
       <div id="pano"></div>
     </div>
     <p id="disclaimer">*Orbit exaggerated for display purposes</p>
+    <div id="footer">
+        <a href="https://github.com/reidjs/spacexflights"><i class="fa fa-github-alt" aria-hidden="true"></i>
+          GitHub</a>
+        <a href="https://www.linkedin.com/in/reidsherman/"><i class="fa fa-linkedin" aria-hidden="true"></i>
+          LinkedIn</a>
+        <a href="https://www.reidsherman.com/"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
+          Website</a>
+      </div>
   </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
   <script type="application/javascript" src="lib/bundle.js"></script>
