--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           GitHub</a>
         <a href="https://www.linkedin.com/in/reidsherman/"><i class="fa fa-linkedin" aria-hidden="true"></i>
           LinkedIn</a>
-        <a href="https://www.reidsherman.com/"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
+        <a href="https://devreid.me"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
           Website</a>
       </div>
   </div>
