--- a/index.html
+++ b/index.html
@@ -46,22 +46,23 @@
       <canvas id="myChart"></canvas> 
     </div>
     <input type="text" id="date" value="Select a date" />      
+    <h2><b>Drag the slider to view other launches</b></h2>
     <div id="slider-range"></div>
     <h2><span class="orbit"></span>*</h2>
     <canvas id="myGlobe"></canvas>
+    <p id="disclaimer">*Orbit exaggerated for display purposes</p>
     <h2>Launch Site</h2>
     <div id="map-container">
       <div id="map"></div>
       <div id="pano"></div>
     </div>
-    <p id="disclaimer">*Orbit exaggerated for display purposes</p>
     <div id="footer">
         <a href="https://github.com/reidjs/spacexflights"><i class="fa fa-github-alt" aria-hidden="true"></i>
           GitHub</a>
         <a href="https://www.linkedin.com/in/reidsherman/"><i class="fa fa-linkedin" aria-hidden="true"></i>
           LinkedIn</a>
-        <a href="https://devreid.me"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
-          Website</a>
+        <!-- <a href="https://devreid.me"><i class="fa fa-fighter-jet" aria-hidden="true"></i>
+          Website</a> -->
       </div>
   </div>
   <script type="application/javascript" src="vendor/keymaster.js"></script>
